# carim-discord-bot

./: .gitignore  README.md  carim.json  carim.service  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python.yml
carim-discord-bot/: main.py
carim_discord_bot/: config.py  main.py  message_builder.py  rcon.py
carim_discord_bot/data/: carim.service  config_descriptions.json
carim_discord_bot/rcon/: manager.py  protocol.py  registrar.py  service.py
src/carim_discord_bot/: __init__.py  config.py  main.py  managed_service.py  message_builder.py  newmain.py  setup_instructions.py
src/carim_discord_bot/cftools/: cf_cloud_service.py  omega_service.py
src/carim_discord_bot/data/: carim.service  config.json  config_descriptions.json
src/carim_discord_bot/discord_client/: arguments.py  client.py  discord_service.py  member_count.py
src/carim_discord_bot/rcon/: connection.py  protocol.py  rcon_service.py  registrar.py  service.py
src/carim_discord_bot/services/: player_count.py  scheduled_command.py
src/carim_discord_bot/steam/: query.py  steam_service.py
tests/: test_basic.py  test_discord_message.py  test_instructions.py  test_safe_shutdown.py  test_scheduled_command.py  test_service_restart.py  test_user_commands.py
tests/rcon/: test_rcon.py
