[metadata]
name = carim-discord-bot
version = attr: src.carim_discord_bot.VERSION
description = Discord bot that provides DayZ RCon capabilities and cross chat
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    discord
    dayz
    rcon
license = Apache Software License
license_file = LICENSE
platform = any
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
author = Nathaniel Schaaf
author_email = nathaniel.schaaf@gmail.com
url = https://github.com/schana/carim-discord-bot

[options]
package_dir =
    =src
zip_safe = False
packages = find:
python_requires = >= 3.7.*, <3.9.*

[options.packages.find]
where=src

[options.package_data]
* =
    data/*

[options.entry_points]
console_scripts =
    carim-bot = carim_discord_bot.main:main
